LiH分子の実装

--- a/FCIQMC.ipynb
+++ b/FCIQMC.ipynb
@@ -1208,6 +1208,501 @@
     "print(f\"Final FCIQMC Energy: {E_est:.6f} Ha\")\n",
     "plot_result(E_fci, E_HF, hist_population, hist_shift, hist_energy)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32105f4a-be07-49a7-82a1-0e01196f0d70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- FCI Matrix ---\n",
+      "(225, 225)\n",
+      "[[-8.85407204  0.00000001 -0.         ...  0.          0.          0.        ]\n",
+      " [ 0.00000001 -8.70113079 -0.01121134 ...  0.          0.          0.        ]\n",
+      " [-0.         -0.01121134 -6.80106501 ...  0.          0.          0.        ]\n",
+      " ...\n",
+      " [ 0.          0.          0.         ... -2.45454152  0.         -0.        ]\n",
+      " [ 0.          0.          0.         ...  0.         -2.40746928  0.        ]\n",
+      " [ 0.          0.          0.         ... -0.          0.         -2.373731  ]]\n",
+      "--- K Matrix ---\n",
+      "[[-0.99220727  0.00000001 -0.         ...  0.          0.          0.        ]\n",
+      " [ 0.00000001 -0.83926602 -0.01121134 ...  0.          0.          0.        ]\n",
+      " [-0.         -0.01121134  1.06079976 ...  0.          0.          0.        ]\n",
+      " ...\n",
+      " [ 0.          0.          0.         ...  5.40732325  0.         -0.        ]\n",
+      " [ 0.          0.          0.         ...  0.          5.45439549  0.        ]\n",
+      " [ 0.          0.          0.         ... -0.          0.          5.48813377]]\n",
+      "\n",
+      "---- Initial walkers ----\n",
+      "1 walkers on 0th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|▎                                                                                             | 59/15000 [00:00<00:25, 589.34it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 0: Walkers=1, Shift=0.00000, E_proj=-7.861865\n",
+      "  1 walkers on 0th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  8%|███████▎                                                                                   | 1215/15000 [00:00<00:07, 1763.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1000: Walkers=7, Shift=0.00000, E_proj=-7.861865\n",
+      "  7 walkers on 0th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 14%|█████████████▏                                                                              | 2148/15000 [00:02<00:14, 867.06it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 2000: Walkers=24, Shift=0.00000, E_proj=-7.874135\n",
+      "  21 walkers on 0th determinant\n",
+      "  -1 walkers on 64th determinant\n",
+      "  -2 walkers on 160th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██████████████████▊                                                                         | 3061/15000 [00:04<00:35, 335.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 3000: Walkers=78, Shift=0.00000, E_proj=-7.885874\n",
+      "  60 walkers on 0th determinant\n",
+      "  -2 walkers on 48th determinant\n",
+      "  1 walkers on 63th determinant\n",
+      "  4 walkers on 151th determinant\n",
+      "  -10 walkers on 160th determinant\n",
+      "  -1 walkers on 176th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 27%|████████████████████████▋                                                                   | 4020/15000 [00:09<01:35, 115.44it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 4000: Walkers=199, Shift=-0.35468, E_proj=-7.882649\n",
+      "  141 walkers on 0th determinant\n",
+      "  4 walkers on 1th determinant\n",
+      "  1 walkers on 11th determinant\n",
+      "  -1 walkers on 16th determinant\n",
+      "  3 walkers on 25th determinant\n",
+      "  -2 walkers on 32th determinant\n",
+      "  -6 walkers on 48th determinant\n",
+      "  1 walkers on 49th determinant\n",
+      "  1 walkers on 63th determinant\n",
+      "  -3 walkers on 96th determinant\n",
+      "  1 walkers on 111th determinant\n",
+      "  16 walkers on 151th determinant\n",
+      "  1 walkers on 152th determinant\n",
+      "  -16 walkers on 160th determinant\n",
+      "  1 walkers on 175th determinant\n",
+      "  -1 walkers on 58th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███████████████████████████████                                                              | 5017/15000 [00:17<01:44, 95.37it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 5000: Walkers=324, Shift=-0.58914, E_proj=-7.886486\n",
+      "  218 walkers on 0th determinant\n",
+      "  9 walkers on 1th determinant\n",
+      "  1 walkers on 10th determinant\n",
+      "  1 walkers on 11th determinant\n",
+      "  10 walkers on 25th determinant\n",
+      "  -1 walkers on 31th determinant\n",
+      "  -7 walkers on 48th determinant\n",
+      "  2 walkers on 49th determinant\n",
+      "  1 walkers on 63th determinant\n",
+      "  -9 walkers on 96th determinant\n",
+      "  1 walkers on 97th determinant\n",
+      "  26 walkers on 151th determinant\n",
+      "  -1 walkers on 152th determinant\n",
+      "  -30 walkers on 160th determinant\n",
+      "  1 walkers on 127th determinant\n",
+      "  -1 walkers on 181th determinant\n",
+      "  1 walkers on 182th determinant\n",
+      "  -1 walkers on 58th determinant\n",
+      "  -1 walkers on 198th determinant\n",
+      "  1 walkers on 208th determinant\n",
+      "  1 walkers on 199th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|█████████████████████████████████████▎                                                       | 6011/15000 [00:26<01:30, 99.53it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 6000: Walkers=458, Shift=-0.74112, E_proj=-7.884693\n",
+      "  317 walkers on 0th determinant\n",
+      "  12 walkers on 1th determinant\n",
+      "  1 walkers on 2th determinant\n",
+      "  2 walkers on 15th determinant\n",
+      "  -7 walkers on 16th determinant\n",
+      "  15 walkers on 25th determinant\n",
+      "  -1 walkers on 26th determinant\n",
+      "  -3 walkers on 32th determinant\n",
+      "  -1 walkers on 40th determinant\n",
+      "  -10 walkers on 48th determinant\n",
+      "  2 walkers on 49th determinant\n",
+      "  1 walkers on 63th determinant\n",
+      "  -10 walkers on 96th determinant\n",
+      "  1 walkers on 97th determinant\n",
+      "  2 walkers on 111th determinant\n",
+      "  28 walkers on 151th determinant\n",
+      "  -41 walkers on 160th determinant\n",
+      "  1 walkers on 175th determinant\n",
+      "  1 walkers on 65th determinant\n",
+      "  1 walkers on 191th determinant\n",
+      "  -1 walkers on 104th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 47%|███████████████████████████████████████████▍                                                 | 7010/15000 [00:36<01:28, 89.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 7000: Walkers=548, Shift=-0.80805, E_proj=-7.880362\n",
+      "  392 walkers on 0th determinant\n",
+      "  15 walkers on 1th determinant\n",
+      "  -1 walkers on 10th determinant\n",
+      "  6 walkers on 15th determinant\n",
+      "  -8 walkers on 16th determinant\n",
+      "  15 walkers on 25th determinant\n",
+      "  -3 walkers on 32th determinant\n",
+      "  -13 walkers on 48th determinant\n",
+      "  1 walkers on 63th determinant\n",
+      "  -1 walkers on 64th determinant\n",
+      "  -12 walkers on 96th determinant\n",
+      "  2 walkers on 111th determinant\n",
+      "  1 walkers on 150th determinant\n",
+      "  28 walkers on 151th determinant\n",
+      "  -1 walkers on 152th determinant\n",
+      "  -40 walkers on 160th determinant\n",
+      "  1 walkers on 166th determinant\n",
+      "  3 walkers on 175th determinant\n",
+      "  -2 walkers on 176th determinant\n",
+      "  1 walkers on 192th determinant\n",
+      "  1 walkers on 162th determinant\n",
+      "  -1 walkers on 126th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 53%|█████████████████████████████████████████████████▌                                           | 8003/15000 [00:48<01:14, 94.38it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 8000: Walkers=669, Shift=-0.83915, E_proj=-7.882130\n",
+      "  470 walkers on 0th determinant\n",
+      "  20 walkers on 1th determinant\n",
+      "  4 walkers on 10th determinant\n",
+      "  2 walkers on 12th determinant\n",
+      "  6 walkers on 15th determinant\n",
+      "  -15 walkers on 16th determinant\n",
+      "  17 walkers on 25th determinant\n",
+      "  -1 walkers on 32th determinant\n",
+      "  -13 walkers on 48th determinant\n",
+      "  4 walkers on 49th determinant\n",
+      "  -3 walkers on 64th determinant\n",
+      "  -19 walkers on 96th determinant\n",
+      "  3 walkers on 97th determinant\n",
+      "  -2 walkers on 112th determinant\n",
+      "  30 walkers on 151th determinant\n",
+      "  -55 walkers on 160th determinant\n",
+      "  1 walkers on 166th determinant\n",
+      "  -1 walkers on 176th determinant\n",
+      "  1 walkers on 180th determinant\n",
+      "  1 walkers on 208th determinant\n",
+      "  -1 walkers on 50th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|███████████████████████████████████████████████████████▉                                     | 9016/15000 [00:59<01:06, 90.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 9000: Walkers=715, Shift=-0.97403, E_proj=-7.883498\n",
+      "  506 walkers on 0th determinant\n",
+      "  23 walkers on 1th determinant\n",
+      "  1 walkers on 10th determinant\n",
+      "  7 walkers on 15th determinant\n",
+      "  -17 walkers on 16th determinant\n",
+      "  23 walkers on 25th determinant\n",
+      "  -1 walkers on 26th determinant\n",
+      "  -1 walkers on 30th determinant\n",
+      "  2 walkers on 31th determinant\n",
+      "  -2 walkers on 32th determinant\n",
+      "  -12 walkers on 48th determinant\n",
+      "  2 walkers on 49th determinant\n",
+      "  -16 walkers on 96th determinant\n",
+      "  -2 walkers on 112th determinant\n",
+      "  2 walkers on 150th determinant\n",
+      "  26 walkers on 151th determinant\n",
+      "  -67 walkers on 160th determinant\n",
+      "  1 walkers on 166th determinant\n",
+      "  1 walkers on 176th determinant\n",
+      "  1 walkers on 127th determinant\n",
+      "  -1 walkers on 104th determinant\n",
+      "  1 walkers on 224th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|█████████████████████████████████████████████████████████████▍                              | 10015/15000 [01:11<00:57, 86.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 10000: Walkers=785, Shift=-0.95264, E_proj=-7.884442\n",
+      "  536 walkers on 0th determinant\n",
+      "  30 walkers on 1th determinant\n",
+      "  7 walkers on 15th determinant\n",
+      "  -22 walkers on 16th determinant\n",
+      "  1 walkers on 17th determinant\n",
+      "  32 walkers on 25th determinant\n",
+      "  1 walkers on 31th determinant\n",
+      "  -3 walkers on 32th determinant\n",
+      "  -14 walkers on 48th determinant\n",
+      "  1 walkers on 49th determinant\n",
+      "  1 walkers on 63th determinant\n",
+      "  -2 walkers on 64th determinant\n",
+      "  -16 walkers on 96th determinant\n",
+      "  -2 walkers on 112th determinant\n",
+      "  1 walkers on 150th determinant\n",
+      "  42 walkers on 151th determinant\n",
+      "  1 walkers on 152th determinant\n",
+      "  -68 walkers on 160th determinant\n",
+      "  1 walkers on 161th determinant\n",
+      "  2 walkers on 166th determinant\n",
+      "  1 walkers on 192th determinant\n",
+      "  -1 walkers on 162th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 73%|███████████████████████████████████████████████████████████████████▌                        | 11008/15000 [01:21<00:53, 74.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 11000: Walkers=855, Shift=-0.93995, E_proj=-7.886064\n",
+      "  575 walkers on 0th determinant\n",
+      "  30 walkers on 1th determinant\n",
+      "  -1 walkers on 2th determinant\n",
+      "  -1 walkers on 10th determinant\n",
+      "  13 walkers on 15th determinant\n",
+      "  -21 walkers on 16th determinant\n",
+      "  -1 walkers on 17th determinant\n",
+      "  33 walkers on 25th determinant\n",
+      "  3 walkers on 26th determinant\n",
+      "  1 walkers on 40th determinant\n",
+      "  -16 walkers on 48th determinant\n",
+      "  3 walkers on 49th determinant\n",
+      "  2 walkers on 63th determinant\n",
+      "  -18 walkers on 96th determinant\n",
+      "  2 walkers on 97th determinant\n",
+      "  1 walkers on 111th determinant\n",
+      "  -1 walkers on 112th determinant\n",
+      "  4 walkers on 150th determinant\n",
+      "  39 walkers on 151th determinant\n",
+      "  -83 walkers on 160th determinant\n",
+      "  1 walkers on 176th determinant\n",
+      "  -1 walkers on 27th determinant\n",
+      "  1 walkers on 80th determinant\n",
+      "  -2 walkers on 182th determinant\n",
+      "  1 walkers on 88th determinant\n",
+      "  -1 walkers on 50th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|█████████████████████████████████████████████████████████████████████████▋                  | 12007/15000 [01:35<00:45, 65.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 12000: Walkers=905, Shift=-0.96780, E_proj=-7.883918\n",
+      "  620 walkers on 0th determinant\n",
+      "  32 walkers on 1th determinant\n",
+      "  2 walkers on 10th determinant\n",
+      "  1 walkers on 11th determinant\n",
+      "  1 walkers on 12th determinant\n",
+      "  16 walkers on 15th determinant\n",
+      "  -13 walkers on 16th determinant\n",
+      "  38 walkers on 25th determinant\n",
+      "  -1 walkers on 30th determinant\n",
+      "  1 walkers on 31th determinant\n",
+      "  -1 walkers on 32th determinant\n",
+      "  -11 walkers on 48th determinant\n",
+      "  3 walkers on 49th determinant\n",
+      "  3 walkers on 63th determinant\n",
+      "  -3 walkers on 64th determinant\n",
+      "  -16 walkers on 96th determinant\n",
+      "  2 walkers on 97th determinant\n",
+      "  -1 walkers on 112th determinant\n",
+      "  5 walkers on 150th determinant\n",
+      "  43 walkers on 151th determinant\n",
+      "  1 walkers on 152th determinant\n",
+      "  -80 walkers on 160th determinant\n",
+      "  2 walkers on 166th determinant\n",
+      "  1 walkers on 167th determinant\n",
+      "  1 walkers on 175th determinant\n",
+      "  -3 walkers on 176th determinant\n",
+      "  -1 walkers on 42th determinant\n",
+      "  -1 walkers on 191th determinant\n",
+      "  -2 walkers on 216th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 87%|███████████████████████████████████████████████████████████████████████████████▊            | 13005/15000 [01:49<00:27, 71.40it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 13000: Walkers=911, Shift=-1.02870, E_proj=-7.880470\n",
+      "  625 walkers on 0th determinant\n",
+      "  33 walkers on 1th determinant\n",
+      "  -1 walkers on 2th determinant\n",
+      "  2 walkers on 10th determinant\n",
+      "  1 walkers on 11th determinant\n",
+      "  24 walkers on 15th determinant\n",
+      "  -18 walkers on 16th determinant\n",
+      "  44 walkers on 25th determinant\n",
+      "  1 walkers on 26th determinant\n",
+      "  1 walkers on 31th determinant\n",
+      "  -5 walkers on 32th determinant\n",
+      "  -14 walkers on 48th determinant\n",
+      "  1 walkers on 49th determinant\n",
+      "  3 walkers on 63th determinant\n",
+      "  -14 walkers on 96th determinant\n",
+      "  2 walkers on 97th determinant\n",
+      "  3 walkers on 111th determinant\n",
+      "  -1 walkers on 112th determinant\n",
+      "  5 walkers on 150th determinant\n",
+      "  46 walkers on 151th determinant\n",
+      "  -60 walkers on 160th determinant\n",
+      "  1 walkers on 165th determinant\n",
+      "  1 walkers on 166th determinant\n",
+      "  -1 walkers on 167th determinant\n",
+      "  -1 walkers on 175th determinant\n",
+      "  1 walkers on 180th determinant\n",
+      "  -1 walkers on 104th determinant\n",
+      "  -1 walkers on 190th determinant\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 92%|████████████████████████████████████████████████████████████████████████████████████▎       | 13744/15000 [01:59<00:17, 72.27it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "from pyscf import gto\n",
+    "\n",
+    "# LiH分子の定義\n",
+    "mol = gto.M(\n",
+    "    atom=f\"Li 0 0 0; H 0 0 1.6\",\n",
+    "    basis=\"sto-3g\",\n",
+    "    spin=0,      # singlet\n",
+    "    verbose=0\n",
+    ")\n",
+    "E_est, E_fci, E_HF, hist_population, hist_shift, hist_energy = \\\n",
+    "    FCIQMC(mol, n_steps=15000, step_starting_shift_upd=3000)\n",
+    "\n",
+    "# 結果を出力\n",
+    "print(\"-\" * 30)\n",
+    "print(f\"FCI Energy: {E_fci:.6f} Ha\")\n",
+    "print(f\"Final FCIQMC Energy: {E_est:.6f} Ha\")\n",
+    "plot_result(E_fci, E_HF, hist_population, hist_shift, hist_energy)\n"
+   ]
   }
  ],
  "metadata": {
